Registrar Usuario y encriptar password

--- a/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd.csproj
@@ -14,8 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\IServices\" />
-    <Folder Include="Domain\IRepositories\" />
+    <Folder Include="DTO\" />
   </ItemGroup>
 
 
