--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "Conexion": "Data Source=(local);Initial Catalog=PreguntasApp;Integrated Security=true;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "KqcL7s998JrfFHRP",
+    "Issuer": "tudominio.com",
+    "Audience":  "tudominio.com"
+  }
 }
